ingevuld alles mijn naam en klas

--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
 <body>
     <header>
         <p>Studentnummer: 6040603</p>
+        <p>Studentnummer: 6037685</p>
     </header>
     <main>
         <p>Julian Trel</p>
+        <p>Kishan Soekhoe</p>
     </main>
     <footer>
+        <p>SWD-C</p>
         <p>SWD-C</p>
     </footer>
 </body>
